@@ -1,3 +1,8 @@
+2008-09-26  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/opt.c, doc/pdcp.1.in : 
+	  Add pdcp -e option to explicitly specify remote path to pdcp binary.
+
 2008-09-22  Mark Grondona <mgrondona@llnl.gov>
 
 	* : tag pdsh-2.17.
